Frankbelford/uatv1ba/force-app/main/default/objects/Vetting_Supporting_Information__c/Vetting_Supporting_Information__c.object-meta.xml
<CustomObject>
    <label>Supporting Information</label>
    <nameField>
        <label>Supporting Information Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Supporting Informations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>