Frankbelford/uatv1ba/force-app/main/default/objects/Vetting_Supporting_Information__c/fields/Activity_Duration__c.field-meta.xml
<CustomField>
    <fullName>Activity_Duration__c</fullName>
    <formula>To__c - From__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Duration (Days)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>