Frankbelford/uatv1ba/force-app/main/default/objects/Vetting_Supporting_Information__c/fields/Activity_Other__c.field-meta.xml
<CustomField>
    <fullName>Activity_Other__c</fullName>
    <label>Activity Other</label>
    <length>255</length>
    <type>Text</type>
</CustomField>