Frankbelford/uatv1ba/force-app/main/default/objects/Vetting_Supporting_Information__c/fields/Date_Changed__c.field-meta.xml
<CustomField>
    <fullName>Date_Changed__c</fullName>
    <label>Date Changed</label>
    <type>Date</type>
</CustomField>