Frankbelford/uatv1ba/force-app/main/default/objects/Vetting_Supporting_Information__c/fields/Days_at_Address__c.field-meta.xml
<CustomField>
    <fullName>Days_at_Address__c</fullName>
    <formula>Resident_Until__c-Resident_From__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days at Address</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>