Frankbelford/uatv1ba/force-app/main/default/objects/Vetting_Supporting_Information__c/fields/ID_Group__c.field-meta.xml
<CustomField>
    <fullName>ID_Group__c</fullName>
    <label>ID Group</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Group 1: Primary identity documents</fullName>
            </value>
            <value>
                <fullName>Group 2a: Trusted government documents</fullName>
            </value>
            <value>
                <fullName>Group 2b: Financial and social history documents</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>