Frankbelford/uatv1ba/force-app/main/default/objects/Vetting_Supporting_Information__c/fields/ID_Type__c.field-meta.xml
<CustomField>
    <fullName>ID_Type__c</fullName>
    <label>ID Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>ID_Group__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Adoption certificate</fullName>
            </value>
            <value>
                <fullName>Bank or building society account opening confirmation letter</fullName>
            </value>
            <value>
                <fullName>Bank or building society statement</fullName>
            </value>
            <value>
                <fullName>Benefit statement, for example Child Benefit, Pension</fullName>
            </value>
            <value>
                <fullName>Biometric residence permit</fullName>
            </value>
            <value>
                <fullName>Birth certificate - issued after time of birth</fullName>
            </value>
            <value>
                <fullName>Birth certificate - issued within 12 months of birth</fullName>
            </value>
            <value>
                <fullName>Cards carrying the PASS accreditation logo</fullName>
            </value>
            <value>
                <fullName>Central or local government, government agency, or local council document giving entitlement</fullName>
            </value>
            <value>
                <fullName>Council Tax statement</fullName>
            </value>
            <value>
                <fullName>Credit card statement</fullName>
            </value>
            <value>
                <fullName>Current driving licence (full or provisional) - paper version (if issued before 1998)</fullName>
            </value>
            <value>
                <fullName>Current driving licence photocard - (full or provisional)</fullName>
            </value>
            <value>
                <fullName>EEA National ID card</fullName>
            </value>
            <value>
                <fullName>Financial statement, for example pension or endowment</fullName>
            </value>
            <value>
                <fullName>Firearms licence</fullName>
            </value>
            <value>
                <fullName>HM Forces ID card</fullName>
            </value>
            <value>
                <fullName>Immigration document, visa or work permit</fullName>
            </value>
            <value>
                <fullName>Irish Passport Card</fullName>
            </value>
            <value>
                <fullName>Letter from head teacher or college principal</fullName>
            </value>
            <value>
                <fullName>Letter of sponsorship from future employment provider</fullName>
            </value>
            <value>
                <fullName>Marriage/civil partnership certificate</fullName>
            </value>
            <value>
                <fullName>Mortgage statement</fullName>
            </value>
            <value>
                <fullName>P45 or P60 statement</fullName>
            </value>
            <value>
                <fullName>Passport</fullName>
            </value>
            <value>
                <fullName>Utility bill</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>