Frankbelford/uatv1ba/force-app/main/default/objects/Vetting_Supporting_Information__c/fields/Information_Type__c.field-meta.xml
<CustomField>
    <fullName>Information_Type__c</fullName>
    <label>Information Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Previous First Name</fullName>
            </value>
            <value>
                <fullName>Previous Surname</fullName>
            </value>
            <value>
                <fullName>Previous Nationality</fullName>
            </value>
            <value>
                <fullName>Previous Address</fullName>
            </value>
            <value>
                <fullName>Previous Resident</fullName>
            </value>
            <value>
                <fullName>Activity History</fullName>
            </value>
            <value>
                <fullName>Identification Documentation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>