Frankbelford/uatv1ba/force-app/main/default/objects/Vetting_Supporting_Information__c/fields/Post_Town__c.field-meta.xml
<CustomField>
    <fullName>Post_Town__c</fullName>
    <label>Post Town</label>
    <length>255</length>
    <type>Text</type>
</CustomField>