Frankbelford/uatv1ba/force-app/main/default/objects/Vetting_Supporting_Information__c/fields/Previous_Name__c.field-meta.xml
<CustomField>
    <fullName>Previous_Name__c</fullName>
    <label>Previous Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>