Frankbelford/uatv1ba/force-app/main/default/objects/Vetting_Supporting_Information__c/fields/Previous_Nationality__c.field-meta.xml
<CustomField>
    <fullName>Previous_Nationality__c</fullName>
    <label>Previous Nationality</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Nationality</valueSetName>
    </valueSet>
</CustomField>