Frankbelford/uatv1ba/force-app/main/default/objects/Vetting_Supporting_Information__c/fields/Resident_From__c.field-meta.xml
<CustomField>
    <fullName>Resident_From__c</fullName>
    <label>Resident From</label>
    <type>Date</type>
</CustomField>