Frankbelford/uatv1ba/force-app/main/default/objects/Vetting_Supporting_Information__c/fields/Resident_Until__c.field-meta.xml
<CustomField>
    <fullName>Resident_Until__c</fullName>
    <label>Resident Until</label>
    <type>Date</type>
</CustomField>