Frankbelford/uatv1ba/force-app/main/default/objects/Vetting_Supporting_Information__c/fields/Supporting_Text__c.field-meta.xml
<CustomField>
    <fullName>Supporting_Text__c</fullName>
    <label>Supporting Text</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>