Frankbelford/uatv1ba/force-app/main/default/objects/Vetting_Supporting_Information__c/fields/Vetting_Document__c.field-meta.xml
<CustomField>
    <fullName>Vetting_Document__c</fullName>
    <label>Vetting Document</label>
    <referenceTo>Vetting_Document__c</referenceTo>
    <relationshipLabel>Supporting Informations</relationshipLabel>
    <relationshipName>Supporting_Informations</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>